# storyshelf

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  AUDIT_REPORT.md  CLAUDE.md  Makefile  README.md
backend-django/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend-django/analysis/: admin.py  callbacks.py  llm_engine.py  middleware.py  models.py  ner_engine.py  serializers.py  tasks.py  text_parser.py  text_stats.py  urls.py  views.py
backend-django/analysis/migrations/: 0001_initial.py  0002_initial.py  0003_alter_bookcharacter_unique_together_and_more.py  0004_bookcharacter_ai_fields.py  0005_bookcharacter_canonical.py
backend-django/analysis/tests/: conftest.py  test_llm_engine.py  test_models.py  test_ner_engine.py  test_tasks.py  test_text_parser.py  test_text_stats.py  test_views.py
backend-django/books/: admin.py  lookups.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend-django/books/fixtures/: seed_books.json
backend-django/books/migrations/: 0001_initial.py  0002_alter_bookauthor_unique_together_and_more.py  0002_alter_characterrelation_unique_together_and_more.py  0003_alter_book_page_count_alter_book_year.py  0003_remove_book_genres_bookgenre_book_genres.py  0004_alter_book_isbn_alter_book_page_count_and_more.py  0004_book_slug.py  0005_bookcharacter_ai_fields.py  0006_book_ai_extraction_status.py  0007_remove_bookauthor_role_alter_bookgenre_book_and_more.py  0008_book_cover_url.py  0009_remove_book_ai_extraction_failure_reason_and_more.py
backend-django/books/tests/: test_book_crud.py  test_book_search.py  test_books.py  test_books_filters.py  test_contains_character.py  test_import_books.py  test_models.py  test_pagination.py  test_seed.py  test_serializers.py  test_slug_routing.py
backend-django/characters/: ai.py  models.py  relations.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend-django/characters/migrations/: 0001_initial.py  0002_remove_characterrelation_label_and_more.py  0003_alter_characterrelation_options.py
backend-django/characters/tests/: test_ai.py  test_api.py  test_models.py  test_relations.py  test_services.py  test_tasks.py
backend-django/config/: celery.py  pagination.py  test_helpers.py  urls.py
backend-django/config/settings/: __init__.py  base.py  dev.py  prod.py
backend-django/config/tests/: test_openapi_schema.py
backend-django/docs/api/: openapi.yml
backend-django/feed/: serializers.py  urls.py  views.py
backend-django/feed/tests/: test_api.py
backend-django/ratings/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend-django/ratings/migrations/: 0001_initial.py
backend-django/ratings/tests/: test_api.py  test_signals.py
backend-django/reviews/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend-django/reviews/migrations/: 0001_initial.py  (+2 more)
backend-django/shelf/: admin.py  models.py  serializers.py  urls.py  urls_public.py  urls_shelves.py  views.py
backend-django/users/: admin.py  cookie_auth.py  exporters.py  models.py  selectors.py  serializers.py  stats.py  views.py
(+1098 files in other folders)
