[project]
name = "storyshelf"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.17",
    "djangorestframework-simplejwt>=5.5",
    "django-cors-headers>=4.9",
    "drf-spectacular>=0.29",
    "celery>=5.6",
    "psycopg2-binary>=2.9",
    "gunicorn>=26.0",
    "dj-database-url>=3.1",
    "redis>=5.2",
    "torch>=2.10",
    "transformers>=4.57",
    "openai>=1.0",
    "tiktoken>=0.7",
    "gevent>=24",
    "flower>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
