[project]
name = "storyshelf"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.17",
    "djangorestframework-simplejwt>=5.5",
    "django-cors-headers>=4.9",
    "drf-spectacular>=0.29",
    "psycopg[binary]>=3.2",
    "gunicorn>=26.0",
    "dj-database-url>=3.1",
    "Pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
"*/serializers.py" = ["N815"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["."]
norecursedirs = [".venv", "migrations", "__pycache__"]

[tool.coverage.run]
source = ["."]
omit = ["*/migrations/*", "*/.venv/*", "*/tests/*", "manage.py", "conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
